# pong-clone

./: CMakeLists.txt  README.md  ball.cpp  ball.hpp  config.hpp  game.cpp  game.hpp  main.cpp  paddle.cpp  paddle.hpp  paddle_base.cpp  paddle_base.hpp  paddle_players.cpp  paddle_players.hpp  score.cpp  score.hpp
